# pico-synth

./: .gitignore  CMakeLists.txt  build.sh
src/: buttons.c  buttons.h  frequency.c  hardware.h  input.cpp  input.hpp  led.c  led.h  main.c  main.cpp  waves.c  waves.cpp  waves.h  waves.hpp
